# docs/swagger.yaml
@@ -21,6 +21,13 @@ definitions:
     - email
     - name
     type: object
+  types.RequestPredict:
+    properties:
+      video_url:
+        type: string
+    required:
+    - video_url
+    type: object
   types.RequestUpdateUser:
     properties:
       age:
@@ -74,6 +81,75 @@ paths:
       summary: 로그인 (첫 로그인 시 회원가입)
       tags:
       - Users
+  /predict:
+    get:
+      consumes:
+      - application/json
+      description: 로그인한 사용자의 자세 추정 결과를 조회합니다.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/global.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/global.Response'
+      security:
+      - Bearer: []
+      summary: 자세 추정 결과 조회
+      tags:
+      - Reports
+    post:
+      consumes:
+      - application/json
+      description: 자세를 추정합니다. (동영상 URL을 입력받아 자세를 추정합니다.)
+      parameters:
+      - description: 동영상 URL
+        in: body
+        name: video_url
+        required: true
+        schema:
+          $ref: '#/definitions/types.RequestPredict'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/global.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/global.Response'
+      security:
+      - Bearer: []
+      summary: 자세 추정 요청
+      tags:
+      - Reports
+  /predict/all:
+    get:
+      consumes:
+      - application/json
+      description: 자세 추정 결과를 조회합니다.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/global.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/global.Response'
+      security:
+      - Bearer: []
+      summary: 자세 추정 결과 전체 조회 (테스트용)
+      tags:
+      - Reports
   /users/me:
     delete:
       consumes:
